# xsk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  run_all_tests.sh
.github/workflows/: ci.yml  rust.yml
bench/: Cargo.toml
bench/benches/: min.rs
bench/scripts/: install.sh  install_centos.sh  install_ubuntu.sh  run_recv.sh  run_send.sh  setup.sh  teardown.sh  update_kernel_centos.sh  update_kernel_ubuntu.sh  vars.sh
bench/scripts/local/: run_recv.sh  run_send.sh  setup.sh  teardown.sh  vars.sh
bench/src/: lib.rs  net.rs  util.rs
benches/: link1_to_link2.rs
benches/setup/: mod.rs  veth_setup.rs  xsk_setup.rs
examples/: dev1_to_dev2.rs  dev2_to_dev1.rs  hello-xdp.rs  hello_xdp.rs  link1_to_link2.rs  shared_umem.rs
examples/setup/: mod.rs  util.rs  veth_setup.rs
src/: frame_manager.rs  lib.rs  poll.rs  prelude.rs  ring.rs  socket.rs  umem.rs  util.rs
src/config/: mod.rs  socket.rs  umem.rs
src/socket/: config.rs  fd.rs  mod.rs  poll.rs  rx_queue.rs  socket.rs  tx_queue.rs
src/umem/: comp_queue.rs  config.rs  fill_queue.rs  frame.rs  mem.rs  mmap.rs  mod.rs  umem.rs
src/umem/frame/: cursor.rs  mod.rs
src/umem/mem/: mmap.rs  mod.rs
src/umem/mmap/: framed.rs  mod.rs
tests/: common.rs  comp_queue_tests.rs  fill_queue_tests.rs  integration_tests.rs  rx_queue_tests.rs  setup.rs  tx_queue_tests.rs  umem_tests.rs  veth_setup.rs
tests/setup/: mod.rs  util.rs  veth_setup.rs  xsk_setup.rs
