[package]
name = "xsk-rs"
version = "0.6.0"
authors = ["Douglas Gray <dbgray01@gmail.com>"]
edition = "2018"
description = "Rust bindings for Linux AF_XDP sockets"
license = "MIT"
repository = "https://github.com/DouglasGray/xsk-rs"
readme = "README.md"
keywords = ["AF_XDP", "XSK", "eBPF", "XDP"]

[dependencies]
bitflags = "2.5.0"
cfg-if = "1.0.0"
libc = "0.2.155"
libxdp-sys = "0.2.0"
log = "0.4.21"

[dev-dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
ctrlc = "3.4.1"
env_logger = "0.10.1"
etherparse = "0.13.0"
futures = "0.3.29"
rand = "0.8.5"
rtnetlink = "0.14.0"
serial_test = "2.0.0"
structopt = "0.3.26"

[dev-dependencies.tokio]
version = "1.6"
default-features = false
features =  ["rt-multi-thread", "macros", "sync", "signal", "time"]
