[package]
name = "bench"
version = "0.1.0"
authors = ["Douglas Gray <dbgray01@gmail.com>"]
edition = "2018"

[[bin]]
name = "recv"
path = "src/bin/recv.rs"

[[bin]]
name = "send"
path = "src/bin/send.rs"

[lib]
name = "bench"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.3"
env_logger = "0.8.2"
etherparse = "0.9.0"
log = "0.4.11"
nix = "0.19.0"
rand = "0.7.3"

[dependencies.xsk-rs]
path = ".."